deploy/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relikquary-prod
  labels:
    app.kubernetes.io/name: relikquary
    relikquary.khorum.io/env: prod
